# gudhi-devel

./: CMakeLists.txt
biblio/: bibliography.bib
src/Bitmap_cubical_complex/include/gudhi/: Bitmap_cubical_complex.h
src/Hasse_complex/include/gudhi/: Hasse_complex.h
src/Multi_persistence/concept/: MultiFiltrationValue.h
src/Multi_persistence/include/gudhi/: Slicer.h  (+3 more)
src/Multi_persistence/test/: CMakeLists.txt  multipersistence_mma_unit_test.cpp  multipersistence_slicer_unit_test.cpp
src/Persistence_matrix/test/: pm_column_tests.h  pm_test_utilities.h  test_persistence_matrix_field.cpp  test_persistence_matrix_field_operators.cpp
src/Persistent_cohomology/concept/: FilteredComplex.h
src/Persistent_cohomology/test/: persistent_cohomology_unit_test.cpp  persistent_cohomology_unit_test_multi_field.cpp
src/Simplex_tree/test/: simplex_tree_serialization_unit_test.cpp
src/Strong_collapse/example/: CMakeLists.txt  strong_collapse_from_points.cpp  strong_collapse_rips_persistence_step_by_step.cpp
src/Strong_collapse/test/: CMakeLists.txt  test_flag_complex_sparse_matrix.cpp  test_flag_complex_tower_assembler.cpp
src/Strong_collapse/utilities/: strong_collapse_distance_matrix.cpp  strong_collapse_rips_persistence.cpp
src/Tower_to_filtration/example/: CMakeLists.txt  example_elementary_input_write_filtration_into_file.cpp  example_tower_from_file_write_filtration_into_file.cpp
src/Tower_to_filtration/test/: CMakeLists.txt  test_persistence.cpp  test_tower_converter.cpp
src/common/doc/: examples.h
src/python/: CMakeLists.txt
src/python/gudhi/: CMakeLists.txt  _cohomology.cc  _cubical_complex.cc  _ripser.py  _simplex_tree.cc  cubical_complex.py  periodic_cubical_complex.py  simplex_tree.py
(+63 files in other folders)
